--- a/src/components/common/Post/PostForm/PostForm.module.scss
+++ b/src/components/common/Post/PostForm/PostForm.module.scss
@@ -2,6 +2,21 @@
   background: #ffffff;
   width: 867px;
   height: 1320px;
-  position: relative;
-  left: 0px;
+  padding-left: 24px;
+}
+
+.add_titles {
+  padding-top: 37px;
+}
+
+.add_title {
+  font-family: 'Jost';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  color: #2a2f37;
+  opacity: 0.6;
 }
